--- a/style.css
+++ b/style.css
@@ -53,35 +53,63 @@ table {
 *******************************************************************************
 */
 
+.cards {
+	position: relative;
+}
+
 .card {
-  background: green;
   width: 50px;
   height: 50px;
+	border: 1px solid black;
+	position: absolute;
 }
 
-main .card:nth-child(1) {
+.card:nth-child(1) {
   background: green;
 }
 
-main .card:nth-child(1) {
+.card:nth-child(2) {
   background: red;
 }
 
 .slide-in {
-  animation-duration: 3s;
+  animation-duration: 100ms;
   animation-name: slide-in;
-  animation-iteration-count: 3;
   animation-direction: alternate;
+	animation-fill-mode: forwards;
 }
+
+.right-move {
+	margin-left: 0%;
+}
+
+.left-move {
+	margin-right: 0%;
+}
+
+/*@keyframes right-move {
+	from {
+		margin-left: 0%;
+	}
+	to {
+		margin-left: 100%;
+	}
+}
+
+@keyframes left-move {
+	from {
+		margin-right: 0%;
+	}
+	to {
+		margin-right: 100%;
+	}
+}*/
 
 @keyframes slide-in {
   from {
-    margin-left:100%;
-    width:300%
+		transform: translate(0px, 0px) rotate(0deg);
   }
-
   to {
-    margin-left:0%;
-    width:100%;
+		transform: translate(100px, 100px) rotate(20deg);
   }
 }
