--- a/style.css
+++ b/style.css
@@ -53,27 +53,117 @@ table {
 *******************************************************************************
 */
 
-.cards {
+/*@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i');*/
+
+.u {
+	border-bottom: 1px solid white;
+	font-style: italic;
+}
+
+html, body {
+	height: 100%;
+
+}
+
+#root {
+	height: 100%;
 	position: relative;
 }
 
+main {
+	border: 1px solid white;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+	color: white;
+	font-family: 'Poppins', sans-serif;
+}
+
+summary {
+	margin-top: 20px;
+}
+
+.tagline {
+	margin-bottom: 20px;
+	font-size: 1.5em;
+}
+
+.details {
+	font-size: .8em;
+	margin-top: 40px;
+}
+
+#logo {
+	font-size: 5em;
+}
+
+.cards {
+	position: absolute;;
+	height: 100%;
+	width: 100%;
+	top: 0;
+}
+
 .card {
-  width: 50px;
-  height: 50px;
-	border: 1px solid black;
+  width: 100%;
+  height: 100%;
 	position: absolute;
+	-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
 .card:nth-child(1) {
-  background: green;
+  background: blueviolet;
+	z-index: -1;
 }
 
 .card:nth-child(2) {
-  background: red;
+  background: gold;
+	z-index: -2;
 }
 
+.card:nth-child(3) {
+  background: limegreen;
+	z-index: -3;
+}
+
+.card:nth-child(4) {
+  background: midnightblue;
+	z-index: -4;
+}
+
+.card:nth-child(5) {
+  background: mediumseagreen;
+	z-index: -5;
+}
+
+.card:nth-child(6) {
+  background: sandybrown;
+	z-index: -6;
+}
+
+.card:nth-child(7) {
+  background: violet;
+	z-index: -7;
+}
+
+.card:nth-child(8) {
+  background: tomato;
+	z-index: -8;
+}
+
+.card:nth-child(9) {
+  background: rebeccapurple;
+	z-index: -9
+}
+
+
+
 .slide-in {
-  animation-duration: 100ms;
+  animation-duration: 1000ms;
   animation-name: slide-in;
   animation-direction: alternate;
 	animation-fill-mode: forwards;
@@ -105,11 +195,35 @@ table {
 	}
 }*/
 
-@keyframes slide-in {
+
+.slide-in-right {
+	animation-duration: 1000ms;
+  animation-name: slide-in-right;
+  animation-direction: alternate;
+	animation-fill-mode: forwards;
+}
+
+.slide-in-left {
+	animation-duration: 1000ms;
+  animation-name: slide-in-left;
+  animation-direction: alternate;
+	animation-fill-mode: forwards;
+}
+
+@keyframes slide-in-right {
   from {
 		transform: translate(0px, 0px) rotate(0deg);
   }
   to {
-		transform: translate(100px, 100px) rotate(20deg);
+		transform: translate(1000px, -1000px) rotate(20deg);
+  }
+}
+
+@keyframes slide-in-left {
+  from {
+		transform: translate(0px, 0px) rotate(0deg);
+  }
+  to {
+		transform: translate(-1000px, -1000px) rotate(-20deg);
   }
 }
