--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ table {
 /*@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i');*/
 
 .u {
-	border-bottom: 1px solid white;
+	border-bottom: 3px solid white;
 	font-style: italic;
 }
 
@@ -77,6 +77,7 @@ main {
 	flex-direction: column;
 	text-align: center;
 	justify-content: center;
+	align-items: center;
 	color: white;
 	font-family: 'Poppins', sans-serif;
 }
@@ -86,13 +87,33 @@ summary {
 }
 
 .tagline {
-	margin-bottom: 20px;
-	font-size: 1.5em;
+	margin: 20px;
+	font-size: 1.2em;
+	font-weight: 100;
 }
 
 .details {
 	font-size: .8em;
 	margin-top: 40px;
+	font-weight: 100;
+}
+
+.vignette {
+  position: relative;
+}
+
+.vignette:after {
+ -moz-box-shadow: inset 0 0 10em #000;
+ -webkit-box-shadow: inset 0 0 10em #000;
+ box-shadow: inset 0 0 10em #000;
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ z-index: 2;
+ content: "";
+ opacity: 0.3;
 }
 
 #logo {
@@ -104,6 +125,9 @@ summary {
 	height: 100%;
 	width: 100%;
 	top: 0;
+	background: blueviolet;
+	z-index: -100;
+	overflow: hidden;
 }
 
 .card {
@@ -160,6 +184,12 @@ summary {
 	z-index: -9
 }
 
+.card:nth-child(10) {
+  background: mediumseagreen;
+	z-index: -10
+}
+
+
 
 
 .slide-in {
@@ -197,14 +227,14 @@ summary {
 
 
 .slide-in-right {
-	animation-duration: 1000ms;
+	animation-duration: 500ms;
   animation-name: slide-in-right;
   animation-direction: alternate;
 	animation-fill-mode: forwards;
 }
 
 .slide-in-left {
-	animation-duration: 1000ms;
+	animation-duration: 500ms;
   animation-name: slide-in-left;
   animation-direction: alternate;
 	animation-fill-mode: forwards;
